src/css/index.css
body {
	background-color: #ffffff;
	margin: 0;
	overflow: hidden;
}

body #game-content {
	display: flex;
	height: 100vh;
}

a, button, #game-content {
  -ms-touch-action: manipulation; /* IE10  */
  touch-action: manipulation; /* IE11+ */
}

#game-preload-screen {
  display: block;
	position: fixed;
  width: 100%;
  height: 100%;
  top: 0;
  background-color: #ffffff;
  z-index: 10;
}

